Fixed the spacing of the 'Create New Patient header' and the navbar (#13)
* Fixed the spacing of the 'Create New Patient header' and the navbar

* Used Sticky to the left column

--- a/packages/esm-patient-registration-app/src/patient-registration/patient-registration.scss
+++ b/packages/esm-patient-registration-app/src/patient-registration/patient-registration.scss
@@ -28,8 +28,11 @@
     margin: $spacing-05 0 $spacing-05 0;
 }
 
-.fixedPosition {
-    position: fixed;
+.stickyColumn {
+    position: sticky;
+    margin-top: 2rem;
+    // 3rem for the nav height and 2rem for top margin
+    top: 5rem;
 }
 
 $color-gray-70: #525252;
